This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: pythonrun.c:_print_total_refs missing prototype
Type: compile error Stage: resolved
Components: Interpreter Core Versions: Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: David.Edelsohn, pitrou, python-dev
Priority: normal Keywords:

Created on 2013-04-24 15:51 by David.Edelsohn, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (5)
msg187713 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-04-24 18:09
Can you tell us a bit more about the compile / build options you used?
msg187714 - (view) Author: David Edelsohn (David.Edelsohn) * Date: 2013-04-24 18:14
A build warning from the PowerLinux buildbot

http://buildbot.python.org/all/builders/PPC64%20PowerLinux%203.x/builds/3/steps/compile/logs/stdio

gcc -pthread -c -Wno-unused-result -g -O0 -Wall -Wstrict-prototypes -m64 -m64   -I. -IInclude -I./Include    -DPy_BUILD_CORE -o Python/pythonrun.o Python/pythonrun.c
Python/pythonrun.c:39:6: warning: function declaration isn’t a prototype [-Wstrict-prototypes]
msg187715 - (view) Author: David Edelsohn (David.Edelsohn) * Date: 2013-04-24 18:17
CPython configured with --with-pydebug
msg187716 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-04-24 18:18
New changeset 6eacc6c134a5 by Antoine Pitrou in branch 'default':
Issue #17832: fix a compilation warning about a function prototype.
http://hg.python.org/cpython/rev/6eacc6c134a5
msg187717 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-04-24 18:19
Ah, right. This is fixed now, thanks for reporting.
History
Date User Action Args
2022-04-11 14:57:44adminsetgithub: 62032
2013-04-24 18:19:16pitrousetstatus: open -> closed
resolution: fixed
messages: + msg187717

stage: resolved
2013-04-24 18:18:02python-devsetnosy: + python-dev
messages: + msg187716
2013-04-24 18:17:28David.Edelsohnsetmessages: + msg187715
2013-04-24 18:14:38David.Edelsohnsetmessages: + msg187714
2013-04-24 18:09:48pitrousetnosy: + pitrou
messages: + msg187713
2013-04-24 15:51:03David.Edelsohncreate