Issue #17832: fix a compilation warning about a function prototype. Also, make the private function static.